fix: minor changes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="navbar">
-      <h1 class="navbar-text"Shout as you never shouted!</h1>
+      <h1 class="navbar-text"> </h1>Shout as you never shouted! </h>
     </div>
     <div class="main">
       <div class="input-section">
