fix: major changes

--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <script src="https://kit.fontawesome.com/0ae1aebe6f.js" crossorigin="anonymous"></script>
-    <title>Thum translator</title>
+    <title>Thu'um translator</title>
   </head>
   <body>
     <div class="navbar">
-      <!-- <h1 class="navbar-text"> </h1>Shout as you never shouted! </h> -->
+      <h1 class="navbar-text">Shout as you never shouted! </h1>
     </div>
     <div class="main">
       <div class="input-section">
-        <h2 class="input-title">Enter your sentence and press the button</h2>
+        <h2 class="input-title">Enter your sentence and translate to THU'UM</h2>
         <textarea name="" id="usertext" cols="100" rows="10"></textarea>
       </div>
       <div class="btn-div">
@@ -23,14 +23,13 @@
       <div class="output-section">
         <textarea name="" id="translation" cols="100" rows="10"></textarea>
         <h2 class="output-title">
-          
         </h2>
       </div>
     </div>
     <div class="footer">
       <h2 class="footer-title">Did you know?</h2>
       <h3 class="footer-text">
-        There are twenty Shouts in Skyrim
+        There are twenty Shouts in Skyrim  
       </h3>
     </div>
     <div class="bottom-container">
@@ -46,6 +45,7 @@
       </div>
       <p class="copyright">© 2021 Puneet Patel</p>
     </div>
-    <script src="app.js"></script>
+
+    <script src="script.js"></script>
   </body>
 </html>
